force-app/main/default/objects/OCX_Portfolio_Membership__c/OCX_Portfolio_Membership__c.object-meta.xml
<CustomObject>
    <description>Join between Account and OCX Portfolio. Source: account_portfolio_mapping.portfolios.</description>
    <label>Portfolio Membership</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Memberships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>