force-app/main/default/objects/OCX_Portfolio_Membership__c/fields/OCX_Account__c.field-meta.xml
<CustomField>
    <fullName>OCX_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Portfolio Memberships</relationshipLabel>
    <relationshipName>OCX_Portfolio_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>