force-app/main/default/objects/OCX_Portfolio_Membership__c/fields/OCX_Membership_ID__c.field-meta.xml
<CustomField>
    <fullName>OCX_Membership_ID__c</fullName>
    <description>&lt;OCX Account ID&gt;::&lt;OCX Portfolio ID&gt;.</description>
    <externalId>true</externalId>
    <label>OCX Membership ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>