force-app/main/default/objects/OCX_Portfolio_Membership__c/fields/OCX_Portfolio_Ref__c.field-meta.xml
<CustomField>
    <fullName>OCX_Portfolio_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio</label>
    <referenceTo>OCX_Portfolio__c</referenceTo>
    <relationshipLabel>Memberships</relationshipLabel>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>